# atomic-llama-cpp-turboquant

./: .gitignore  MTP.md  NEXTN.md  README.md  convert_hf_to_gguf.py
.github/workflows/: build-turboquant-macos.yml  release.yml
common/: arg.cpp  chat-diff-analyzer.cpp  common.cpp  common.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
docs/: BUGS-mtp-cuda-DKQ-512.md  speculative.md
docs/development/: gemma4-assistant-tensor-inventory.md
docs/qwen-udt/: RUNBOOK.md  release-decision.md
ggml/include/: ggml.h
ggml/src/: ggml-turbo-quant.c  ggml.c
include/: llama.h
scripts/: bench-matrix-qwen.sh  bench-qwen-udt-matrix-local.sh  bench-qwen-udt-quality.sh  extract-qwen36-nextn-gguf.py  get-wikitext-2.sh  quantize-qwen-udt-matrix.sh  quantize-qwen-udt.sh  run-gemma4-e4b-mtp-mmproj-server.sh  run-gemma4-mtp-server.sh  run-qwen36-27b-nextn-server.sh  run-qwen36-35ba3b-nextn-server.sh  sanity-27b-turbo3-base.sh  verify-gemma4-assistant-gguf.py  verify-qwen36-nextn-gguf.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama.cpp
src/models/: models.h  (+5 more)
tests/: CMakeLists.txt  test-backend-ops.cpp  test-llama-archs.cpp  test-speculative-mtp.cpp
tools/: CMakeLists.txt
tools/wasm/: CMakeLists.txt  wasm_llama.cpp
(+31 files in other folders)
